<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/login_back_ibtn"
        android:layout_width="10.3dp"
        android:layout_height="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/back_btn"
        android:contentDescription="@string/cd_back"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70.5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/comtimes_logo1"
            android:contentDescription="@string/login_cd_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65.5dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/textBlack"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_id_et"
            android:layout_width="296dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"
            android:background="@drawable/login_et_border"
            android:hint="@string/login_id"
            android:textSize="12sp"
            android:textColor="@color/textBlack"
            android:textColorHint="@color/textGray"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@drawable/cursor_color"
            android:maxLength="15"
            android:autofillHints="@string/login_id"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/login_pw_et"
            android:layout_width="296dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/login_et_border"
            android:hint="@string/login_password"
            android:textSize="12sp"
            android:textColor="@color/textBlack"
            android:textColorHint="@color/textGray"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_color"
            android:imeOptions="actionDone"
            android:maxLength="12"
            android:autofillHints="@string/login_id"
            tools:targetApi="o"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_find_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_find_id"
                android:textSize="12sp"
                android:textColor="@color/textGray"
                android:background="@drawable/text_center_border"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/login_find_pw_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_find_pw"
                android:textSize="12sp"
                android:textColor="@color/textGray"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>


        <ImageButton
            android:id="@+id/login_login_ibtn"
            android:layout_width="148dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:src="@drawable/login_login_btn_img" />

        <TextView
            android:id="@+id/login_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/login_register"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>