<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#FFF"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="100">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5" />


    <ImageButton
        android:id="@+id/drawer_home_ibtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:contentDescription="@string/drawer_cd_home"
        android:src="@drawable/home_img" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <ImageView
        android:id="@+id/drawer_profile_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/drawer_cd_defalut_profile"
        android:src="@drawable/defalut_profile_img" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/drawer_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawer_login_btn_border"
        android:padding="5dp"
        android:text="@string/drawer_login"
        android:textColor="@color/textBlack"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/drawer_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        tools:text="유민욱"/>

    <TextView
        android:id="@+id/drawer_mypage_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_mypage"
        android:textSize="12sp"
        android:textColor="@color/textGray"
        android:drawableStart="@drawable/mypage_img"
        android:drawablePadding="5dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:id="@+id/drawer_news_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/drawer_news_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_news"
            android:textColor="@color/textBlack"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/drawer_news_arrow_iv"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/drawer_cd_right_arrow"
            android:src="@drawable/right_arrow_img" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:id="@+id/drawer_event_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/drawer_event_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_event"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/drawer_event_arrow_iv"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/drawer_cd_right_arrow"
            android:src="@drawable/right_arrow_img" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:id="@+id/drawer_interview_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/drawer_interview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_interview"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/drawer_interview_arrow_iv"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/right_arrow_img"
            android:contentDescription="@string/drawer_cd_right_arrow"/>
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:id="@+id/drawer_activity_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/drawer_activity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_activity"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/drawer_activity_arrow_iv"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/drawer_cd_right_arrow"
            android:src="@drawable/right_arrow_img" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:id="@+id/drawer_lecture_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/drawer_lecture_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_lecture"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/drawer_lecture_arrow_iv"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/drawer_cd_right_arrow"
            android:src="@drawable/right_arrow_img" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:id="@+id/drawer_info_ll"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/drawer_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_infomation"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/drawer_info_arrow_iv"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/drawer_cd_right_arrow"
            android:src="@drawable/right_arrow_img" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="50"/>

    <TextView
        android:id="@+id/drawer_signout_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_logout"
        android:textSize="14sp"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:drawableStart="@drawable/logout_img"
        android:drawablePadding="5dp"
        android:visibility="gone"/>
</LinearLayout>